# learning_log

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: ------.md  -----.md  ----.md  ---.md
Go/essence/my-app/: go.mod  main.go  my-app
Java/bulletin-board/bulletin-board/: pom.xml
Java/designpattern/untitled/: Greeting.html  new-file.txt
Java/javase8/: pom.xml
Java/projava/: README.md  pom.xml  test.txt
Java/tasklist/tasklist/: pom.xml
Java/untitled/: dic.java
Python/: Untitled.ipynb
Rust/The Book/: README.md
Rust/The Book/restauarnt/: Cargo.toml
Rust/algo-method/: README.md
Rust/atcoder/: README.md  compete.toml  memo.txt
Rust/echoserver/: Cargo.toml
Rust/grok-fp/: Cargo.toml
Rust/lang/: README.md
Rust/rust-gear-book/samplecli/: Cargo.toml
Rust/rust-gear-book/samplecli/src/: main.rs
Rust/rust-gear-book/todo/: Cargo.toml  Dockerfile  todo.db
Rust/rust-gear-book/todo/src/: main.rs
Rust/rust-gear-book/todo/templates/: index.html
Rust/rust-in-action/phase2/chap5/: Cargo.toml
Rust/rust-in-action/phase2/chap5/src/: cpu.rs  q7.rs  u8-to-rand.rs  visualizing-f32.rs
Rust/rust-in-action/phase2/chap7/: Cargo.toml
Rust/rust-in-action/phase2/chap7/src/: fview.rs  serde.rs
Rust/yumemi-backend/: Cargo.toml  log.csv
TypeScript/my-editor-app/: package.json
TypeScript/my-next-app/: next.config.js  package.json
TypeScript/next-tutorial-zenn/: package.json
TypeScript/nextjs-gihyo-book/: .eslintrc.json  command.txt  package.json
storybook/taskbox/: package.json
web_project/: README.md
web_project/formValidator/: index.html  script.js  style.css
workflow/: manage-project-on-issues.yml
(+399 files in other folders)
