[package]
name = "rpncalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
clap = { version = "=3.0.0-beta.2", features = ["derive"] }
clap_derive = "=3.0.0-beta.2"
thiserror = "1.0.32"
