[package]
name = "chap7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_cbor = "0.8"

[[bin]]
name = "serde"
path = "src/serde.rs"
[[bin]]
name = "fview"
path = "src/fview.rs"